Extra field added

--- a/reg.html
+++ b/reg.html
@@ -110,6 +110,11 @@
                 <label for="phone">Phone Number</label>
                 <input type="tel" id="phone" name="phone" required>
             </div>
+           <!-- Phone Number Field -->
+           <div class="inputbox">
+                <label for="phone">Alternate Phone Number</label>  
+             	<input type="tel" id="phone" name="phone" required>
+           </div> 
             
             <!-- Submit Button -->
             <button type="submit" class="submit-btn">Register</button>
